# gtranslator

./: .cvsignore  ChangeLog  Makefile.am  NEWS  acconfig.h  configure.ac  configure.in
data/: ChangeLog  Makefile.am  gtranslator-ui.xml  po.lang
data/desktop/: gtranslator.desktop.in
data/gnome-config/: Makefile.am  gtranslatorConf.sh.in
data/pkg-config/: gtranslator.pc.in
data/scripts/: my-update.sh
doc/reference/: gtranslator-docs.sgml  gtranslator.types
help/: Makefile.am
help/oc/: Makefile.am  gtranslator-C.omf  gtranslator.xml
libgtranslator/: ChangeLog  Makefile.am  libgtranslator.h  main.c  preferences.c  stylistics.c  team-handle.c
plugins/: ChangeLog
plugins/alternate-language/: alternate-language-panel.c  alternate-language-plugin.c
plugins/charmap/: charmap-plugin.c
plugins/dictionary/: dict-panel.c  dictionary-plugin.c  dictionary-plugin.h
plugins/open-tran/: Makefile.am  open-tran-dialog.glade  open-tran-panel.c  open-tran-panel.h  open-tran-plugin.c  open-tran-plugin.h  open-tran.gtranslator-plugin.desktop.in
po/: ChangeLog  POTFILES.in  da.po  ga.po  gl.po  ja.po  ko.po  lt.po  pl.po  ru.po  sv.po  uk.po
src/: ChangeLog  Makefile.am  about.c  about.h  actions-edit.c  actions-file.c  actions-go.c  actions-help.c  actions-search.c  actions-view.c  actions.c  actions.h  alternate-language.c  alternate-language.h  application.c  application.h  bookmark.c  bookmark.h  color-schemes.c  comment-panel.c  comment.c  comment.h  compile.c  convert.c  convert.h  dialogs.c  dialogs.h  dnd.c  draw-spaces.c  find.c  formats.c  formats.h  gtr-message-container.c  gtr-message-container.h  gtr-toolbar.xml  gtranslator-ui.xml  gui.c  gui.h  header.c  header.h  (+63 more)
src/alternatelanguage/: Makefile.am  alternate-language-panel.c  alternate-language.c  alternate-language.h
src/charmap/: Makefile.am  charmap-panel.c  charmap-panel.h  charmap.c  charmap.h
src/comment/: Makefile.am  comment-panel.c  comment-panel.h  comment.c  comment.h
src/dialogs/: Makefile.am  bookmarks-dialog.glade  comment-dialog.c  comment-dialog.glade  file-dialogs.c  file-dialogs.h  header-dialog.c  header-dialog.glade  preferences-dialog.c  preferences-dialog.glade  preferences-dialog.h  preferences.glade  search-dialog.c  search-dialog.glade  search-dialog.h
src/dictionary/: Makefile.am  dict-panel.c  dict-panel.h  dict-sidebar.c  dictionary.c  dictionary.h
src/messagestable/: Makefile.am  messages-table-panel.c  messages-table-panel.h  messages-table.c  messages-table.h
src/toolbareditor/: Makefile.am
